Промежуточный коммит: починил оставшееся апи
