# sources/app/Http/Resources/BestOffers/BestOfferResource.php
@@ -1,0 +1,19 @@
+<?php
+
+namespace App\Http\Resources\BestOffers;
+
+use Illuminate\Http\Request;
+use Illuminate\Http\Resources\Json\JsonResource;
+
+class BestOfferResource extends JsonResource
+{
+    /**
+     * Transform the resource into an array.
+     *
+     * @return array<string, mixed>
+     */
+    public function toArray(Request $request): array
+    {
+        return parent::toArray($request);
+    }
+}
